# ElasticROS

./: LICENSE  README.md  requirements.txt  setup.py
cloud_integration/: __init__.py  vpc_setup.py  vpn_config.py
cloud_integration/templates/: ec2_instance.yaml
config/: aws_config.yaml  default_config.yaml  network_config.yaml
docs/: api_reference.md  installation.md  quickstart.md
elasticros_core/: __init__.py  elastic_action.py  elastic_node.py  press_node.py  release_node.py
elasticros_core/utils/: data_transfer.py  metrics.py  network_utils.py
elasticros_ros/: CMakeLists.txt  package.xml
elasticros_ros/launch/: elasticros.launch
elasticros_ros/scripts/: elastic_node_ros.py
elasticros_ros/src/: elastic_manager.cpp  ros_wrapper.py
elasticros_ros2/: CMakeLists.txt  package.xml
elasticros_ros2/launch/: elasticros_launch.py
elasticros_ros2/scripts/: elastic_node_ros2.py
examples/grasping/: README.md  config.yaml  grasp_detection_node.py
examples/human_robot_dialogue/: README.md  config.yaml  speech_recognition_node.py
scripts/: install_dependencies.sh  network_setup.sh  setup_aws.py
tests/: test_aws_integration.py  test_elastic_action.py  test_node_communication.py
