<?xml version="1.0"?>
<package format="2">
  <name>elasticros_ros</name>
  <version>1.0.0</version>
  <description>ROS integration for ElasticROS - Algorithm-level elastic computing for robotics</description>

  <maintainer email="elasticros@example.com">ElasticROS Team</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/ElasticROS/elasticros</url>
  <url type="bugtracker">https://github.com/ElasticROS/elasticros/issues</url>
  <url type="repository">https://github.com/ElasticROS/elasticros</url>

  <author email="elasticros@example.com">ElasticROS Team</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>