<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>elasticros_ros2</name>
  <version>1.0.0</version>
  <description>ROS2 integration for ElasticROS - Algorithm-level elastic computing for robotics</description>
  
  <maintainer email="elasticros@example.com">ElasticROS Team</maintainer>
  <license>MIT</license>
  
  <url type="website">https://github.com/ElasticROS/elasticros</url>
  <url type="bugtracker">https://github.com/ElasticROS/elasticros/issues</url>
  <url type="repository">https://github.com/ElasticROS/elasticros</url>
  
  <author email="elasticros@example.com">ElasticROS Team</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>